--- a/src/main/webapp/resources/css/user/change_password.css
+++ b/src/main/webapp/resources/css/user/change_password.css
@@ -1,43 +1,75 @@
-@charset "UTF-8";
-
-body{
-	background-color: var(--subColor);
-	font-family: 'GimpoGothicBold00';
-	
-}
 /*비밀번호 재설정 컨테이너*/
 .changePasswordCon{
 	width: 450px;
-	height: 400px;
-	padding: 1rem;
-	background-color: rgb(76, 76, 76);
+	height: 355px;
+	background-color: rgba(66, 66, 66, 0.88);
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
-	
+	font-family: "Black Han Sans";
+	box-shadow: 0 0 7px black;
 }
-
-/*비밀번호 인풋 구역*/
 .innerTop{
-	height: 70%;
-	/* border: 3px solid green; */
+	height: 300px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-around;
-	
+
 }
+.explainSpan{
+	display: inline-block;
+	height: 40px;
+	font-size: 1.1rem;
+	padding-top: 5px;
+	font-weight: bolder;
+}
+.wrapDiv{
+	width: 100%;
+	height: 90px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.formInputs{
+	margin: 0;
+	width: 300px;
+	height: 50px;
+}
+.wrapDiv span{
+	display: inline-block;
+	width: 300px;
+	height: 40px;
+	padding-top: 5px;
+}
+
 /*버튼 구역*/
 .innerBottom{
-	height: 30%;
-	/* border: 3px solid crimson; */
+	height: 50px;
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
+	padding-bottom: 5px;
 }
 
-.explainSpan{
-	color: white;
-	font-size: 1.1rem;
+
+@media screen and (min-width: 1px) and (max-width: 767px) {
+	.changePasswordCon{
+		width: 95%;
+		min-width: 260px;
+	}
+	.explainSpan{
+		font-size: 0.8rem;
+	}
+	.formInputs{
+		width: 95%;
+		font-size: 0.7rem;
+	}
+	.wrapDiv span{
+		width: 95%;
+	}
+	.formBtns{
+		width: 100px;
+		font-size: 0.7rem;
+	}
 }
