--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -47,6 +47,7 @@
 }
 /*메인*/
 .homeMain{
+	width: 100%;
 	height: calc(100vh - 80px);
 	display: flex;
 	flex-wrap: wrap;
@@ -69,7 +70,6 @@
 	align-items: center;
 	cursor: pointer;
 	transition: .3s;
-	overflow: hidden;
 }
 .homeImgWrapDiv img{
 	width: 100%;
@@ -91,7 +91,7 @@
 	0 0  90px crimson,
 	0 0 120px crimson;
 	animation: hue-rotate 3s linear infinite;
-	font-size: 5rem;
+	font-size: 3rem;
 }
 
 .homeImgWrapDiv p{
@@ -129,9 +129,12 @@
 		height: 50%;
 	}
 	.homeImgWrapDiv{
-		width: 90%;
-		height: 90%;
+		width: 70%;
+		height: 70%;
 		box-shadow: 0px 0px 2px white, 0px 0px 4px white, 0px 0px 8px white;
+	}
+	.homeImgWrapDiv h1{
+		font-size: 1.5rem;
 	}
 	.homeImgWrapDiv img{
 		opacity: 0.5;
@@ -155,9 +158,12 @@
 		height: 50%;
 	}
 	.homeImgWrapDiv{
-		width: 90%;
-		height: 90%;
+		width: 80%;
+		height: 80%;
 		box-shadow: 0px 0px 2px white, 0px 0px 4px white, 0px 0px 8px white;
+	}
+	.homeImgWrapDiv h1{
+		font-size: 3rem;
 	}
 	.homeImgWrapDiv img{
 		opacity: 0.5;
