--- a/src/main/webapp/resources/css/user/basket.css
+++ b/src/main/webapp/resources/css/user/basket.css
@@ -2,35 +2,88 @@
 	font-family: 'GimpoGothicRegular00';
 	color: var(--subFontColor);
 }
+.basketHeader{
+	width: 100%;
+	max-width: 1600px;
+	height: 80px;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	padding-left: 5px;
+}
 /*장바구니 상품 정보 구역*/
 .basketMiddle {
-	min-height: calc(100vh - 80px);
-	padding: 1rem;
-	text-align: center;
-
+	margin: 0 auto;
+	width: 100%;
+	max-width: 1600px;
+	height: calc(100vh - 160px);
+	background-color: var(--sub2Color);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
-
-
-/*장바구니 상품 테이블*/
 #basketTable {
-	margin: 1rem auto;
-	width: 60%;
-	border-collapse: collapse;
-	background-color: #2e383c;
-	border-radius: 20px;
+	width: 100%;
 }
-#basketTable th {
-	font-size: 1.2rem;
-	color: var(--subFontColor);
-	padding: 1rem;
-	width: calc(100% / 4);
+.basketTableTop{
+	width: 100%;
+	height: 50px;
+	background-color: rgba(0, 0, 0, 0.27);
+	display: flex;
 }
-#basketTable td {
-	padding: 1rem;
-	color: var(--basicFontColor);
-	text-align: center;
-	transition: .3s;
 
+.basketTableTop span{
+	width: 40%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	font-weight: bolder;
+}
+.basketTableTop span:first-child{
+	width: 10%;
+}
+.basketTableTop span:last-child{
+	width: 10%;
+}
+.basketTableBottom{
+	width: 100%;
+	height: calc(100vh - 290px);
+	overflow-y: auto;
+}
+.basketTableBottom::-webkit-scrollbar{
+	width: 10px;
+}
+.basketTableBottom::-webkit-scrollbar-track{
+	background-color: rgb(94, 94, 94);
+}
+.basketTableBottom::-webkit-scrollbar-thumb{
+	background-color: rgba(31, 31, 31, 0.47);
+}
+.basketLineDiv{
+	width: 100%;
+	height: 80px;
+	display: flex;
+}
+.basketLineInnerDiv{
+	width: 40%;
+	height: 80px;
+	display: flex;
+	align-items: center;
+}
+.basketLineInnerDiv:first-child{
+	width: 10%;
+	justify-content: center;
+}
+.basketLineInnerDiv:last-child{
+	width: 10%;
+	justify-content: center;
+}
+/*상품 이미지*/
+.productImg{
+	width: 70px;
+	height: 70px;
+	border-radius: 20px;
+	border: 2px solid white;
 }
 .basketRadio{
 	cursor: pointer;
@@ -38,32 +91,25 @@
 .productAnchor{
 	transition: .3s;
 }
-#deleteBtn, #buyBtn{
-	border-radius: 10px;
-
+.btnDiv{
+	width: 100%;
+	height: 80px;
+	background-color: rgba(0, 0, 0, 0.49);
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
 }
 
 @media screen and (min-width: 1px) and (max-width: 767px) {
-
-	.basketMiddle h1{
-		font-size: 1.3rem;
-	}
-	#basketTable{
-		width: 100%;
-	}
-	#basketTable th{
-		font-size: 0.5rem;
-		padding: 0.5rem 0;
-	}
-	#basketTable td{
-		font-size: 0.5rem;
-		padding: 0.5rem 0;
-	}
-	#deleteBtn, #buyBtn{
+	.btnDiv .formBtns{
 		width: 100px;
-		background-color: transparent;
-		text-decoration: underline;
-		font-size: 0.5rem;
+		font-size: 0.8rem;
+	}
+	.basketTableTop span{
+		font-size: 0.8rem;
+	}
+	.basketLineDiv{
+		font-size: 0.8rem;
 	}
 }
 
