--- a/src/main/webapp/resources/css/shop/main/shop_admin.css
+++ b/src/main/webapp/resources/css/shop/main/shop_admin.css
@@ -297,6 +297,7 @@ main {
 }
 /*상품 더 불러오기 디비전*/
 .viewMoreDiv {
+    height: 50px;
     width: 100%;
     padding: 0.5rem;
     background-color: var(--subColor);
@@ -304,20 +305,19 @@ main {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    position: relative;
+    border-bottom: 1px solid white;
 }
 .moreSpan {
     display: inline-block;
     padding: 10px;
     cursor: pointer;
-    transition: .3s;
+    transition: .3s ease-in;
     font-family: 'Black Han Sans';
     font-size: 1.5rem;
-}
-
-.viewMoreDiv i {
-    font-size: 2rem;
-    color: var(--fontColor);
-    cursor: pointer;
+    background-color: var(--subColor);
+    position: absolute;
+    bottom: -25px;
 }
 /*사이드바 디비전*/
 .side {
@@ -543,10 +543,9 @@ main {
     }
     .forwardSpan:hover, .backSpan:hover{
         transform: scale(1.1,1.1) translateY(-50%);
-        color: var(--hoverColor);
     }
     .moreSpan:hover {
-        background-color: rgba(38, 38, 38, 0.5);
+        color: var(--subFontColor);
     }
     .categorySpan:hover, .brandSpan:hover {
         background-color: rgba(38, 38, 38, 0.5);
